Update middleware to ensure api key actions work perfectly Removed `dpd` dependency from the client app Added auto-renewal of access tokens
