# resources/middleware/delete.js
@@ -1,8 +1,10 @@
 // if not internal and id is not specified or dpd-ssh-key:true in headers, cancel
 cancelUnless(ctx.isSuperUser || internal || query.id || body.id, 'Not Allowed', 403);
 var noVerify = ctx.getConfig('jwt.noverify.DELETE');
+// user exists from token
+// request is made with dpd-ssh-key:true
 // resource is called internally
-if (ctx.isSuperUser || internal ||
+if (ctx.user.id || ctx.isSuperUser || internal ||
         //  or not asked to verify
                 (!Array.isArray(noVerify) && noVerify) ||
                 // or asked to verify but not first part
@@ -11,12 +13,5 @@ if (ctx.isSuperUser || internal ||
             proceed();
 // resource is called externally or not asked to not verify
         else {
-            // verify token
-            ctx.jwt.verify({
-                issuer: 'http://smartalumni.io'
-            }, function (err, payload) {
-                killIf(err, 'Access denied!');
-                ctx.user = payload;
-                proceed();
-            });
+            kill('Access denied!');
         }
